Update category endpoint to use authz
